# brain-avatar

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/api/: conversations.ts  digest.ts  feedback.ts  health.ts  messages.ts
backend/lib/: supabase.ts
backend/supabase/: schema.sql
daemon/: com.moil.brain-ingest.plist  com.moil.brainavatar.app.plist  com.moil.brainavatar.daemon.plist  run-brain-daemon.sh  run-brain-ingest.sh  setup-daemon.sh
docs/: CAPABILITY_ROADMAP.md  IPHONE.md  KANBAN_DESIGN.md  LOCAL_MODEL_TRAINING_PLAN.md  MACBOOK_CLIENT_PLAN.md  MACBOOK_SETUP.md  MODEL_PERFORMANCE_AUDIT.md  RESILIENCE.md  TRAINING_CAPABILITIES_AUDIT.md  avatar-access-report.html
gateway/: README.md  com.moil.lm-queue-proxy.plist  com.moil.lmstudio-keeper.plist  lm-queue-proxy.py  run-lmstudio-keeper.sh
scripts/: cleanup-app-duplicates.sh  eval-agentic-model.mjs  ios-add-permissions.sh  publish-release.sh  tag-release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  speak-helper.swift  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: automations.rs  commands.rs  config.rs  files.rs  history.rs  lib.rs  llm.rs  main.rs  mcp.rs  shell.rs  task_board.rs  tools.rs  trajectory.rs  tts.rs  video.rs  voice.rs
src/components/: Automations.tsx  Avatar.tsx  ChatPanel.tsx  Chats.tsx  ErrorBoundary.tsx  Settings.tsx  TaskBoard.tsx  TitleBar.tsx  TrainingTracker.tsx
src/lib/: agent-recover.test.ts  agent.test.ts  agent.ts  automations.ts  connection.ts  kanban.test.ts  kanban.ts  llm.ts  markdown.tsx  peek.ts  platform.ts  router.test.ts  router.ts  tauri.ts  types.ts  updater.ts  voice.test.ts  voice.ts
training/: README.md  auto-train.sh  com.moil.brainavatar.train.plist  dedup.ts  distill.ts  export.ts  kto.ts  mockenv.ts  outcomes.ts  readiness.ts  reasoning.ts  redact.ts  selftest.ts  synthesize.ts  system_prompt.txt  tool_defs.ts  train.env.example  train.sh  types.ts
training/eval/: cases.ts  run.ts
