[package]
name = "brain-avatar"
version = "0.1.0"
description = "Floating local-AI brain avatar for Moil"
authors = ["Andres Urrego"]
edition = "2021"

[lib]
name = "brain_avatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "io-util"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
