[package]
name = "brain-avatar"
version = "0.1.17"
description = "Floating local-AI brain avatar for Moil"
authors = ["Andres Urrego"]
edition = "2021"
# Two binaries (the Tauri app + the headless daemon) share one lib; make the app
# the default so `cargo run` / `tauri dev` aren't ambiguous.
default-run = "brain-avatar"

[lib]
name = "brain_avatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
# Stream combinators for the daemon's OpenAI streaming passthrough (stream: true).
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# Headless brain-daemon: exposes the brain-owner tools over HTTP for the MacBook client.
axum = "0.7"

# The Tauri app (default) and the headless daemon are two binaries over one lib.
[[bin]]
name = "brain-avatar"
path = "src/main.rs"

[[bin]]
name = "brain-daemon"
path = "src/bin/brain-daemon.rs"
