[package]
name = "brain-avatar"
version = "0.1.23"
description = "Floating local-AI brain avatar for Moil"
authors = ["Andres Urrego"]
edition = "2021"
# Two binaries (the Tauri app + the headless daemon) share one lib; make the app
# the default so `cargo run` / `tauri dev` aren't ambiguous.
default-run = "brain-avatar"

[lib]
name = "brain_avatar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Cross-platform base (desktop + iOS/Android). `macos-private-api` stays here
# because tauri-build's allowlist ties it to `macOSPrivateApi: true` in the config
# (it's a no-op on iOS). The desktop-only `tray-icon` feature and the desktop-only
# plugins (global-shortcut, updater, process) live under the target gate below so
# the iOS build doesn't try to compile them.
tauri = { version = "2", features = ["macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros", "time", "io-util", "net", "sync"] }
# Stream combinators for the daemon's OpenAI streaming passthrough (stream: true).
futures-util = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# Headless brain-daemon: exposes the brain-owner tools over HTTP for the MacBook client.
axum = "0.7"

# Desktop-only (macOS/Windows/Linux): the floating-window chrome — system tray,
# the global summon hotkey, the in-app auto-updater, and relaunch. None of these
# apply on iOS (single full-screen webview, no tray/hotkeys, App Store updates),
# so they're gated out of the mobile build entirely.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# The Tauri app (default) and the headless daemon are two binaries over one lib.
[[bin]]
name = "brain-avatar"
path = "src/main.rs"

[[bin]]
name = "brain-daemon"
path = "src/bin/brain-daemon.rs"
